# kmeans_tpu

./: CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements_v4.txt  requirements_v6e.txt
benchmarks/: 01_benchmark_cpu_tpu.py  02_benchmark_sklearn.py  03_compare_inertia.py  benchmark_results_v4-8.txt  benchmark_results_v6e-4.txt  run_benchmarks.sh
examples/: 01_basic_usage.py  02_blobs.py
kmeans_tpu/: __init__.py  algorithm.py  metrics.py
