[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kmeans_tpu"
version = "0.1.0"
description = "A JAX-based open-source framework for TPU-accelerated clustering"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Vincenzo Brachetta", email = "v.brachetta@bham.ac.uk"}
]
license = "MIT"
dependencies = [
    "jax[tpu]",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["kmeans_tpu*"]
